fixing an unnecessary vertical scrollbar

--- a/Sprint-3/quote-generator/style.css
+++ b/Sprint-3/quote-generator/style.css
@@ -7,6 +7,7 @@
   --shado-color: #524f4f;
 }
 body {
+  margin: 0;
   padding: 0;
   font-size: 1.5rem;
   font-family: sans-serif;
